--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,9 @@
     margin: 0;
     padding: 0;
 }
+body {
+    background-color: rgb(226, 43, 43);
+}
 
 .container {
     height: 100vh;
@@ -21,7 +24,7 @@
 }
 
 .calculator {
-    height: 400px;
+    height: 455px;
     width: 350px;
     border: 3px solid black;
     max-width: 50%;
@@ -36,6 +39,8 @@
     height: 100px;
     background-color: #F7CAC9;
     border: 1px solid black;
+    display: flex;
+    flex-direction: column;
 }
 
 .btn-container {
@@ -55,4 +60,65 @@ button {
 
 button:hover {
     background-color: cornflowerblue;
+    cursor: pointer;
+}
+
+.display {
+    grid-column: 1 / -1;
+    background-color: rgb(82, 6, 6);
+    color: white;
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-around;
+    flex-direction: column;
+    padding: 10px;
+    word-wrap: break-word;
+    word-break: break-all;
+}
+
+.display .answer {
+    font-size: 2.5rem;
+}
+
+.display .sum {
+    font-size: 1.5rem;
+}
+
+.clear {
+    width: 50%;
+    height: 45px;
+    background-color: red;
+    color: white;
+    text-align: center;
+    padding-top: 10px;
+    border: 1px solid #F7CAC9;
+    font-size: 20px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.delete {
+    width: 50%;
+    height: 45px;
+    background-color: red;
+    color: white;
+    text-align: center;
+    padding-top: 10px;
+    border: 1px solid #F7CAC9;
+    font-size: 20px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    float: right;
+}
+
+.clear:hover {
+    background-color: white;
+    border: 1px solid black;
+    color: black;
+    cursor: pointer;
+}
+
+.delete:hover {
+    background-color: white;
+    border: 1px solid black;
+    color: black;
+    cursor: pointer;
 }
