--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 body {
     background-color: rgb(226, 43, 43);
@@ -24,9 +25,9 @@ body {
 }
 
 .calculator {
-    height: 455px;
+    height: 460px;
     width: 350px;
-    border: 3px solid black;
+    border: 5px solid black;
     max-width: 50%;
     max-width: 1000px;
     min-width: 350px;
@@ -65,8 +66,7 @@ button:hover {
 
 .display {
     grid-column: 1 / -1;
-    background-color: rgb(82, 6, 6);
-    color: white;
+    background-color: white;
     display: flex;
     align-items: flex-end;
     justify-content: space-around;
@@ -86,24 +86,22 @@ button:hover {
 
 .clear {
     width: 50%;
-    height: 45px;
+    height: 51px;
     background-color: red;
     color: white;
     text-align: center;
     padding-top: 10px;
-    border: 1px solid #F7CAC9;
     font-size: 20px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .delete {
     width: 50%;
-    height: 45px;
+    height: 51px;
     background-color: red;
     color: white;
     text-align: center;
     padding-top: 10px;
-    border: 1px solid #F7CAC9;
     font-size: 20px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     float: right;
