--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body {
 }
 
 .container {
-    height: 100vh;
+    height: 80vh;
     width: auto;
     display: flex;
     justify-content: center;
@@ -110,12 +110,6 @@ button {
     border-radius: 4px;
 }
 
-button:hover {
-    background: #F0E4CE;
-    box-shadow: 0px 2px 10px 5px #A1C9D7;
-    color: #F49586;
-}
-
 button:after {
     content: "";
     background: #A1C9D7;
@@ -126,7 +120,7 @@ button:after {
     margin-left: -20px !important;
     margin-top: -120%;
     opacity: 0;
-    transition: all 1.2s
+    transition: all 0.8s
 }
 
 button:active:after {
@@ -140,10 +134,10 @@ button:focus { outline:0; }
 
 footer {
     text-align: center;
-    font-size: 20px;
+    font-size: 50px;
 }
 
 a {
     text-decoration: none;
-    color: #A1C9D7;
+    color: #F0E4CE;
 }
